重构依赖，配置打包方式